--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Critical Part Of Algo Trading Most Traders Ignore</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">53 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Critical Part Of Algo Trading Most Traders Ignore</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">53 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
