--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">44 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -497,7 +497,7 @@
                     <div class="video-info">
                         <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">44 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7986,7 +7986,7 @@
                         <div class="video-info">
                             <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10331,7 +10331,7 @@
                         <div class="video-info">
                             <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
