--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">58 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">58 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
