--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Why Nothing Feels Exciting Anymore</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1170,7 +1170,7 @@
                     <div class="video-info">
                         <h3>These Reddit Recipes are Horrible</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Why Nothing Feels Exciting Anymore</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10639,7 +10639,7 @@
                         <div class="video-info">
                             <h3>These Reddit Recipes are Horrible</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
